[tool.poetry]
name = "flask-simple-api"
version = "0.1.0"
description = "This is just a simple flask-restful-api to play around with docker, redis, postgres, docker-compose and rabbitmq."
authors = ["ImanHpr <imanhpr1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-RESTful = "^0.3.9"
redis = "^4.3.4"
Flask-SQLAlchemy = "^2.5.1"
pika = "^1.3.0"
rich = "^12.4.4"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
mypy = "^0.961"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
